--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
     <div id="root">
@@ -31,7 +32,7 @@
                     </div>
                 </div>
                 <ul>
-                    <li v-for="(contact, i) in arrContacts" class="contactList" @click="showChat(contact)">
+                    <li v-for="(contact, i) in filterContact" class="contactList" @click="showChat(contact)">
                         <img :src="contact.avatar" alt="" class="avatarImg" >
                         <div>
                             <div>{{ contact.name }}</div>
@@ -57,15 +58,23 @@
                     </div>
                 </div>
                 <div class="messArea">
-                    <div v-for="message in arrContacts[activeIndex].messages"
+                    <div v-for="(message, i) in arrContacts[activeIndex].messages"
                         :class="message.status == 'received' ? 'receivedMess' : 'sentMess'" class="message">
-                        <div>{{ message.message }}</div>
-                        <div>{{ estractData(message.date) }}</div>
+                        <div class="dropdown">
+                            <button class="btn " type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <div>{{ message.message }}</div>
+                                <div>{{ estractData(message.date) }}</div>
+                            </button>
+                            <ul class="dropdown-menu">
+                              <li><a @click="deleteMess(i)" class="dropdown-item" href="#">Delate</a></li>
+                            </ul>
+                        </div>
                     </div>
+                    
                 </div>
                 <div class="messBar">
                     <i class="fa-regular fa-face-smile"></i>
-                    <input type="text" v-model="writeMessage.message" @keyup.enter="upMessage()" placeholder="Scrivi un messaggio">
+                    <input type="text" v-model="newMessSent.message" @keyup.enter="addMess()" placeholder="Scrivi un messaggio">
                     <i class="fa-solid fa-microphone"></i>
                 </div>
             </div>
@@ -75,7 +84,7 @@
         </div>
     </div>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="assets/script.js"></script>
 </body>
